--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ install:
   - sudo wget http://pear.drush.org/get/drush-5.9.0.tgz
   - sudo tar -xzvf drush-5.9.0.tgz
   - sudo chmod ugo+x drush-5.9.0/drush
-  - echo $PATH
   - sudo ln -s /usr/local/drush-5.9.0/drush /usr/bin/drush
+  - sudo ln -s /home/travis/.phpenv/shims/php /usr/bin/php
   - which drush
   - drush status
   - phpenv rehash
