--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,18 @@ install:
 
   # Update apt-get
   - sudo apt-get update
-
   # Install Drush
-  - composer self-update
-  - composer global require drush/drush:5.*
+  # - pear channel-discover pear.drush.org
+  # - pear install drush/drush-5.9.0
+  - cd /usr/local
+  - which php
   - which php5
-  - which drush
+  - export PATH=$PATH:/home/travis/.phpenv/shims/php
+  - sudo wget http://pear.drush.org/get/drush-5.9.0.tgz
+  - sudo tar -xzvf drush-5.9.0.tgz
+  - sudo chmod ugo+x drush-5.9.0/drush
+  - sudo ln -s /usr/local/drush-5.9.0/drush /usr/bin/drush
+  - sudo ln -s /usr/bin/php5 /usr/bin/php
   - drush status
   - phpenv rehash
 
