--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   # - pear install drush/drush-5.9.0
   - cd /usr/local
   - phpenv rehash
-  - sudo git clone --branch 5.x git@github.com:drush-ops/drush.git
+  - sudo git clone --branch 5.x https://github.com/drush-ops/drush.git
   - sudo ln -s /usr/local/drush-5.9.0/drush /usr/bin/drush
   - sudo chmod u+x drush/drush
   - drush --version
