--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - sudo git clone --branch 5.x https://github.com/drush-ops/drush.git drush
   - sudo ln -s /usr/local/drush/drush /usr/bin/drush
   - sudo chmod u+x drush/drush
-  - drush --version
+  - sudo drush --version
   - drush status
 
 before_script:
