--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
   - phpenv rehash
   - sudo git clone --branch 5.x https://github.com/drush-ops/drush.git drush
   - sudo ln -s /usr/local/drush/drush /usr/bin/drush
-  - sudo chmod 777 /usr/local/drush/lib
-  - sudo chmod u+x drush/drush
+  - sudo chown travis /usr/local/drush/lib
+  - sudo chmod ugo+x drush/drush
   - drush --version
   - drush status
 
